--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "test": "mocha test"
   },
+  "engines" : {
+    "node" : ">=0.11.16" 
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/markotom/node-odoo"
