--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-odoo",
-  "version": "0.0.2",
+  "name": "odoo",
+  "version": "0.0.1",
   "description": "Node.js client library for Odoo using JSON-RPC",
   "main": "./lib/index.js",
   "directories": {
@@ -10,21 +10,21 @@
     "test": "mocha test"
   },
   "engines" : {
-    "node" : ">=0.11.16" 
+    "node" : ">=0.11.16"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/markotom/node-odoo"
+    "url": "https://github.com/saidimu/odoo"
   },
   "keywords": [
     "odoo",
     "openepr"
   ],
-  "author": "Marco Godínez <markotom@gmail.com>",
+  "author": "Saidimu Apale <saidimu@gmail.com>",
   "bugs": {
-    "url": "https://github.com/markotom/node-odoo/issues"
+    "url": "https://github.com/saidimu/odoo/issues"
   },
-  "homepage": "https://github.com/markotom/node-odoo",
+  "homepage": "https://github.com/saidimu/odoo",
   "dependencies": {
     "jayson": "^1.1.3"
   },
