--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "keywords": [
     "odoo",
-    "openepr"
+    "openepr",
+    "jsonrpc"
   ],
   "author": "Saidimu Apale <saidimu@gmail.com>",
   "bugs": {
@@ -26,7 +27,7 @@
   },
   "homepage": "https://github.com/saidimu/odoo",
   "dependencies": {
-    "jayson": "^1.1.3"
+    "jayson": "^1.2.1"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
