--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/saidimu/odoo",
   "dependencies": {
-    "jayson": "^1.2.1"
+    "jayson": "^1.2.1",
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
